perf(plugins) Refactoring of URL to URI to avoid URL's blocking equals and hashCode functions.
JIRA: APIMAN-1097